fixed alignment homepage

--- a/styles1.css
+++ b/styles1.css
@@ -7,7 +7,9 @@ div img {
     display: block;
     width:  400px;
     height: 540px;
-    margin: auto;
+    /* margin: auto; */
+    margin-right: auto;
+    margin-left: auto;
 }
 
 
